codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 118
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---







✔ 自动审查器批准 Codex 执行 rm -f /tmp/guardian-approved.sqlite（仅这次）

  .------------.
  | 轻轻漂来。 |
  '------------.
    \
  }~   ~{
  ( ^..^ )
   \__/
  Ripple ★ 常见 美西螈 · 坐立不安

› Ask Codex to do anything

  gpt-5.3-codex 默认 · 上下文 [     ] · /tmp/project
