codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_approved_request_permissions_renders_request_summary.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 198
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---



✔ 自动审查器 已批准 执行 权限请求：Need write access for generated report
  assets.

• 处理中 (0s • esc 中断)


› 让 Codex 帮你做任何事

  gpt-5.5 默认 · 已用 0% · /tmp/project
