codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_parallel_reviews_render_aggregate_status.snap
---
source: tui/src/chatwidget/tests/mcp_guardian.rs
expression: normalize_snapshot_paths(rendered)
---
• Reviewing 2 approval requests (0s • esc 中 断 )
  └ • rm -rf '/tmp/guardian target 1'
    • rm -rf '/tmp/guardian target 2'
  .-----------------------------------.
  | drifts up through the footer with |
  | impeccable manners                |
  '-----------------------------------.
    \
   .---.
  ( ^ ^ )
  / ~~~ \\
  Echo ★ common ghost · visible · fidgety
  peak PATIENCE 74 · none · sleepy eyes · hatching · pets 0


› Ask Codex to do anything

  gpt-5.3-codex default · 100% left · /tmp/project
