codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hook_blocked_failed_feedback_history_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1530
expression: rendered
---
• 工具调用前 钩子（已拦截）
  反馈：run tests before touching the fixture

• 工具调用后 钩子（失败）
  错误：hook exited with code 7
