codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hook_completed_before_reveal_renders_completed_without_running_flash_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1860
expression: "format!(\"started hidden:\\n{started_hidden_snapshot}\\nhistory:\\n{history}\")"
---
started hidden:

history:
• 会话开始 钩子（已完成）
  钩子上下文：session context
