codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hook_events_render_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• 正在运行 SessionStart 钩子: warming the shell

SessionStart hook (completed)
  警告：Heads up from the hook
  钩子上下文：Remember the startup checklist.
