codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hook_live_running_then_quiet_completed_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1469
expression: "format!(\"{running_snapshot}\\n\\n{completed_lingering_snapshot}\\n\\n{completed_snapshot}\")"
---
running
live hooks:
• 正在运行 工具调用后 钩子
history:
<empty>

completed lingering
live hooks:
• 正在运行 工具调用后 钩子
history:
<empty>

completed after linger
live hooks:
<empty>
history:
<empty>
