codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hook_runs_while_exec_active_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1785
expression: "format!(\"exec running:\\n{exec_running}\\nexec and hook running:\\n{exec_and_hook_running}\\nhistory after exec:\\n{history_after_exec}\\nhook running after exec:\\n{hook_running_after_exec}\\nquiet hook completed lingering:\\n{quiet_hook_completed_lingering}\\nquiet hook completed:\\n{quiet_hook_completed}\")"
---
exec running:
• 执行中 echo done

exec and hook running:
active exec:
• 执行中 echo done
active hooks:
• 正在运行 工具调用后 钩子：checking output policy

history after exec:
• 已执行 echo done
  └ done

hook running after exec:
• 正在运行 工具调用后 钩子：checking output policy

quiet hook completed lingering:
• 正在运行 工具调用后 钩子：checking output policy

quiet hook completed:
<empty>
